--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <tr> 
             <td>Nama</td>
             <td>Christo Paskah Matindas</td>
-            <td rowspan="8"><img src="./https://drive.google.com/file/d/1n6KvKD9ES6z47n6zW5idSASgg4lRshpw/view?usp=sharing" width="200" alt="foto christo"></td>
+            <td rowspan="8"><img src="mybiodata/WhatsApp Image 2022-06-03 at 13.30.43.jpeg" width="200" alt="foto christo"></td>
         </tr>
         <tr>
             <td>Tempat Tanggal Lahir</td>
