--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <td>Main Game & Olahraga</td>
         </tr>
         <tr align="center">
-            <td><img src="./foto/download.jpg" width="35" alt="logo instagram">@chrstomatindas</td>
+            <td><img src=".mybiodata/foto/download.jpg" width="35" alt="logo instagram">@chrstomatindas</td>
             <td><img src=".mybiodata/foto/Facebook-Logo-Square-768x768.png" width="35" alt="logo facebook">christomatindas</td>
         </tr>
     </table>
