--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <tr> 
             <td>Nama</td>
             <td>Christo Paskah Matindas</td>
-            <td rowspan="8"><img src="mybiodata/WhatsApp Image 2022-06-03 at 13.30.43.jpeg" width="200" alt="foto christo"></td>
+            <td rowspan="8"><img src="WhatsApp Image 2022-06-03 at 13.30.43.jpeg" width="200" alt="foto christo"></td>
         </tr>
         <tr>
             <td>Tempat Tanggal Lahir</td>
@@ -42,8 +42,8 @@
             <td>Main Game & Olahraga</td>
         </tr>
         <tr align="center">
-            <td><img src=".mybiodata/foto/download.jpg" width="35" alt="logo instagram">@chrstomatindas</td>
-            <td><img src=".mybiodata/foto/Facebook-Logo-Square-768x768.png" width="35" alt="logo facebook">christomatindas</td>
+            <td><img src="foto/download.jpg" width="35" alt="logo instagram">@chrstomatindas</td>
+            <td><img src="foto/Facebook-Logo-Square-768x768.png" width="35" alt="logo facebook">christomatindas</td>
         </tr>
     </table>
     <hr width="300" style="4">
