--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <td>Main Game & Olahraga</td>
         </tr>
         <tr align="center">
-            <td><img src="foto/download.jpg" width="35" alt="logo instagram">@chrstomatindas</td>
-            <td><img src="foto/Facebook-Logo-Square-768x768.png" width="35" alt="logo facebook">christomatindas</td>
+            <td><img src="download.jpg" width="35" alt="logo instagram">@chrstomatindas</td>
+            <td><img src="Facebook-Logo-Square-768x768.png" width="35" alt="logo facebook">christomatindas</td>
         </tr>
     </table>
     <hr width="300" style="4">
