--- a/index.html
+++ b/index.html
@@ -1,52 +1,140 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biodata</title>
-</head>
-<body>
-    <header>
-    <h1 align="center">BIODATA</h1>
-    <hr width="500" style="4">
-    <hr width="300" style="4">
-    </header>
-    <table border="1" cellspacing="0" cellpeding="5" align="center" width="570">
-        <tr> 
-            <td>Nama</td>
-            <td>Christo Paskah Matindas</td>
-            <td rowspan="8"><img src="WhatsApp Image 2022-06-03 at 13.30.43.jpeg" width="200" alt="foto christo"></td>
-        </tr>
-        <tr>
-            <td>Tempat Tanggal Lahir</td>
-            <td>Manado, 21 April 2003</td>
-        </tr>
-        <tr>
-            <td>Alamat</td>
-            <td>Perum Citra B NO.8 Maumbi</td>
-        </tr>
-        <tr>
-            <td>Agama</td>
-            <td>Kristen Protestan</td>
-        </tr>
-        <tr>
-            <td>Jurusan</td>
-            <td>Sistem Informasi</td>
-        </tr>
-        <tr>
-            <td>Fakultas</td>
-            <td>Ilmu Komputer</td>
-        </tr>
-        <tr>
-            <td>Hobi</td>
-            <td>Main Game & Olahraga</td>
-        </tr>
-        <tr align="center">
-            <td><img src="download.jpg" width="35" alt="logo instagram">@chrstomatindas</td>
-            <td><img src="Facebook-Logo-Square-768x768.png" width="35" alt="logo facebook">christomatindas</td>
-        </tr>
-    </table>
-    <hr width="300" style="4">
-    <hr width="500" style="4">
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>MY CV </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+   <nav class="navbar fixed-top navbar-expand-lg navbar-dark page-navbar gradient">
+      <div class="container">
+        <a class="navbar-brand logo" href="#">My CV</a>
+      </div>
+    </nav>
+    <main class="page cv-page">
+      <section class="cv-block block-intro border-bottom">
+        <div class="container">
+          <div class="avatar">
+            <img class="img-fluid rounded-circle" src="./foto/fotoito.png.jpeg">
+          </div>
+          <p>Hello! saya <strong>Christo Matindas</strong>.Saya berkuliah di kampus universitas klabat. Saya bercita-cita ingin menjadi seorang sukses, dan saya suka makan.</p>
+        </div>
+      </section>
+      <section class="cv-block info">
+          <div class="education group" id="education">
+            <h2 class="text-center">Education</h2>
+            <div class="item">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>Elementry School</h3>
+                  <h4 class="organization">SD Khatolik 07 Manado</h4>
+                </div>
+                <div class="col-md-6">
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>Junior High School</h3>
+                  <h4 class="organization">SMP Kr.Eben Haezar 2 Manado</h4>
+                </div>
+                <div class="col-md-6">
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>Senior High School</h3>
+                  <h4 class="organization">SMA Kr.Eben Haezar Manado</h4>
+                </div>
+                </div>
+              </div>
+            </div>
+          <div class="group" id="skills">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="skills info-card">
+                  <h2>Skills</h2>
+                  <h3>HTML</h3>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                    aria-valuemin="0" aria-valuemax="100" style="width:15%">
+                    </div>
+                  </div>
+                  <h3>CSS</h3>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                    aria-valuemin="0" aria-valuemax="100" style="width:10%">
+                    </div>
+                  </div>
+                  <h3>JavaScript</h3>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                    aria-valuemin="0" aria-valuemax="100" style="width:5%">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="contact-info info-card">
+                  <h2>Contact Info</h2>
+                  <div class="row">
+                    <div class="col-1">
+                      <i class="ion-android-calendar icon"></i>
+                    </div>
+                    <div class="col-9">
+                      <span>21/4/2003</span>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-1">
+                        <i class="ion-person icon"></i>
+                    </div>
+                    <div class="col-9">
+                      <span>Christo Matindas</span>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-1">
+                      <i class="ion-ios-telephone icon"></i>
+                    </div>
+                    <div class="col-9">
+                      <span>+6281355687556</span>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-1">
+                      <i class="ion-at icon"></i>
+                    </div>
+                    <div class="col-9">
+                      <span>Christomatindas@gmail.com</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="hobbies group" id="hobbies">
+            <h2 class="text-center">Hobbies</h2>
+            <p class="text-center text-muted">Saya memiliki  hobi yaitu bermain video games dan juga olahraga.Saya sering pergi bersama teman saya untuk nongkrong, terkadang juga suka untuk pergi bersama ayah saya untuk memancing</p>
+          </div>
+        </div>
+      </section>
+      <footer class="page-footer">
+        <div class="container">
+          <div class="social-icons">
+            <a href="https://www.facebook.com/christomatindas"><i class="ion-social-facebook" title="Facebook"></i></a>
+            <a href="https://www.instagram.com/chrstomatindas/"><i class="ion-social-instagram-outline" title="Instagram"></i></a>
+            <a href="#"><i class="ion-social-twitter" title="Twitter"></i></a>
+          </div>
+        </div>
+      </footer>
+    </main>
+  </body>
 </html>
+
